[package]
name = "comfy-rusty-nodes"
version = "0.1.0"
edition = "2024"

[lib]
name = "comfy_rusty_nodes"
crate-type = ["cdylib"]

[dependencies]
comfy-builder-core = { version = "0.0.4", workspace = true }
pyo3 = "0.26.0"
inventory = "0.3.21"
resize = "0.8.8"
rayon = "1.11.0"
image = { version = "0.25.8", features = ["jpeg", "webp", "png", "rayon", "gif"] }
base64 = "0.22.1"

[build-dependencies]
comfy-builder-core = { version = "0.0.4", workspace = true }
