[project]
name = "rusty-nodes"
description = "A collection of useful custom nodes that help with a wide range of tasks."
version = "1.0.0"
license = { file = "LICENSE" }
classifiers = ["Operating System :: OS Independent"]

[project.urls]
Repository = "https://github.com/milewski/comfy-rusty-nodes"
Documentation = "https://github.com/milewski/comfy-rusty-nodes/wiki"
"Bug Tracker" = "https://github.com/milewski/comfy-rusty-nodes/issues"

[tool.comfy]
PublisherId = "rusty-nodes"
DisplayName = "rusty-nodes"
Icon = "https://github.com/milewski/comfy-builder-template/blob/main/icon.png?raw=true"
includes = []

[build-system]
requires = ["maturin>=1.0,<2.0", "toml"]
build-backend = "maturin"
