[project]
name = "comfyui-rusty-nodes"
description = "A collection of useful custom nodes that help with a wide range of tasks."
version = "0.1.7"
license = { file = "LICENSE" }
classifiers = ["Operating System :: OS Independent"]

[project.urls]
Repository = "https://github.com/milewski/comfyui-rusty-nodes"

[tool.comfy]
PublisherId = "milewski"
DisplayName = "Rusty Nodes"
Icon = "https://github.com/milewski/comfyui-rusty-nodes/blob/main/icon.png?raw=true"
includes = []

[build-system]
requires = ["maturin>=1.0,<2.0", "toml"]
build-backend = "maturin"
